--- a/Software/travelportal_backend/StatsService/pom.xml
+++ b/Software/travelportal_backend/StatsService/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>spring-hateoas</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
