--- a/Software/travelportal_backend/StatsService/src/main/resources/application.yml
+++ b/Software/travelportal_backend/StatsService/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
         input:
           destination: travelportal.consumers
           content-type: application/json
-          group: travelport.consumers.rewards
+          group: travelport.consumers.stats
           consumer:
             concurrency: 3
 
