--- a/Software/travelportal_backend/RewardService/pom.xml
+++ b/Software/travelportal_backend/RewardService/pom.xml
@@ -81,6 +81,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-stream-kafka</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
 </dependencies>
 
 <dependencyManagement>
