--- a/Software/travelportal_backend/StatsService/src/main/resources/application.yml
+++ b/Software/travelportal_backend/StatsService/src/main/resources/application.yml
@@ -1,43 +1,13 @@
-server:
-  port: 0   # uses random port
 
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/db_stats?serverTimezone=Europe/Vienna
-    username: root
-    password: admin
-  jpa:
-    generate-ddl: true
-    hibernate:
-      ddl-auto: create-drop
-      naming:
-        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    show-sql: true
-
   application:
     name: statsservice
+  profiles:
+    active: default   # optional since default
 
-  cloud:
-    stream:
-      kafka:
-        binder:
-          brokers: localhost:9092
-      bindings:
-        input:
-          destination: travelportal.consumers
-          content-type: application/json
-          group: travelport.consumers.stats
-          consumer:
-            concurrency: 3
+  config:
+    import: configserver:http://localhost:8888
 
-eureka:
-  client:
-    #    register-with-eureka: true
-    #    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    instance-id: ${spring.application.name}:${random.value}
-    prefer-ip-address: true
+encrypt:
+  key: topsecret
 
