--- a/Software/travelportal_backend/TravelportalGateway/src/main/resources/application.yml
+++ b/Software/travelportal_backend/TravelportalGateway/src/main/resources/application.yml
@@ -1,54 +1,13 @@
-server:
-  port: 5555
 
 spring:
   application:
     name: travelportalgateway
+  profiles:
+    active: default   # optional since default
 
-  cloud:
-    gateway:
-      routes:
-        - id: blogroute
-          uri: lb://BLOGSERVICE
-          predicates:
-            - Path=/travelportal/blog/**
-          filters:
-            - RewritePath=/travelportal/blog(?<segment>.*), $\{segment}
-            - name: Retry
-              args:
-                retries: 3
-                statutes: NOT_FOUND, INTERNAL_SERVER_ERROR
-                methods: DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT, TRACE
-        - id: statsroute
-          uri: lb://STATSSERVICE
-          predicates:
-            - Path=/travelportal/stats/**
-          filters:
-            - RewritePath=/travelportal/stats(?<segment>.*), $\{segment}
-            - name: Retry
-              args:
-                retries: 3
-                statutes: NOT_FOUND, INTERNAL_SERVER_ERROR
-                methods: DELETE, GET, HEAD, OPTIONS, PATCH, POST, PUT, TRACE
-      globalcors:
-        cors-configurations:
-          "[/**]":
-            allowedOrigins: "*"
-            allowedHeaders: "*"
-            allowedMethods: "*"
+  config:
+    import: configserver:http://localhost:8888
 
+encrypt:
+  key: topsecret
 
-
-eureka:
-  client:
-    register-with-eureka: false
-    registry-fetch-interval-seconds: 5
-    # fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: gateway
